--- a/stylesheet.css
+++ b/stylesheet.css
@@ -122,6 +122,15 @@ label {
   border-radius: 5px;
 }
 
+.tip-btn:active{
+  font-weight: normal;
+  font-size: 20px;
+}
+
+.tip-btn:focus{
+  background-color: hsl(172, 67%, 45%);
+}
+
 .tip-btn:hover {
   background-color: hsl(185, 41%, 84%);
   color: hsl(183, 100%, 15%);
